--- a/install-base.yml
+++ b/install-base.yml
@@ -4,5 +4,5 @@
   become: true
   roles:
     - opsta.install_docker
-    - opsta.docker_compose
+    - ansible-docker_compose
   environment: "{{ proxy_env | default({}) }}"
