--- a/host.ini
+++ b/host.ini
@@ -1,1 +1,2 @@
-db ansible_host=35.247.165.223 ansible_user=nirafxse
+db ansible_host=34.87.149.114 ansible_user=nirafxse
+app ansible_host=35.240.144.51 ansible_user=nirafxse
